[package]
name = "reject-rbl-rcpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
libc = "0.2"
milter = "0.2"
mxdns = "0.4"
once_cell = "1.12"
regex = "1.6"
trust-dns-resolver = "0.21"

[profile.release]
strip = true
