[package]
name = "reject-rbl-rcpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
libc = "0.2"
milter = "0.2"
mxdns = "0.4"
once_cell = "1.18"
regex = "1.9"
trust-dns-resolver = "0.23"

[profile.release]
strip = true
